--- a/galaxy-requirements.yml
+++ b/galaxy-requirements.yml
@@ -1,3 +1,5 @@
 ---
 - src: https://github.com/geerlingguy/ansible-role-repo-epel
   version: 1.3.0
+- src: https://github.com/avanov/ansible-galaxy-pyenv
+  version: 1.1.0
