--- a/playbooks/sugardon02_setup/sugardon02.yml
+++ b/playbooks/sugardon02_setup/sugardon02.yml
@@ -9,3 +9,13 @@
     - apt
     - jetson_nano_common
     - ansible-galaxy-pyenv
+
+- hosts: raspberrypi
+  become: true
+  gather_facts: true
+
+  roles:
+    - user
+    - sshd
+    - apt
+    - ansible-galaxy-pyenv
