--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -4,10 +4,7 @@
 - name: Install a list of packages
   apt:
     update_cache: true
-    pkg:
-      - vim
-      - python
-      - ufw
+    pkg: ["{{apt_pkgs}}"]
 
 - name: Update all packages to their latest version
   apt:
