--- a/roles/starship/tasks/main.yml
+++ b/roles/starship/tasks/main.yml
@@ -7,8 +7,7 @@
 
 - name: starship | Install
   shell: /tmp/starship_install.sh
-  args:
-    executable: /bin/bash
+  become: true
 
 - name: starship | Remove install.sh
   file:
