--- a/roles/starship/tasks/main.yml
+++ b/roles/starship/tasks/main.yml
@@ -6,7 +6,7 @@
     mode: 0755
 
 - name: starship | Install
-  shell: /tmp/starship_install.sh
+  shell: /tmp/starship_install.sh --yes
   become: true
 
 - name: starship | Remove install.sh
