--- a/roles/rcm_dotfiles/tasks/main.yml
+++ b/roles/rcm_dotfiles/tasks/main.yml
@@ -10,4 +10,4 @@
   args:
     chdir: "{{ rcm_dotfiles_git_dest }}"
   become: true
-  become_user: {{ rcm_dotfiles_user }}
+  become_user: "{{ rcm_dotfiles_user }}"
