--- a/galaxy-requirements.yml
+++ b/galaxy-requirements.yml
@@ -3,3 +3,5 @@
   version: 1.3.0
 - src: https://github.com/avanov/ansible-galaxy-pyenv
   version: 1.1.0
+- src: https://github.com/grzegorznowak/ansible-nvm-node
+  version: 1.2.1
