--- a/inventories/dev_tool/group_vars/wsl2_ubuntu/nvm.yml
+++ b/inventories/dev_tool/group_vars/wsl2_ubuntu/nvm.yml
@@ -2,6 +2,6 @@
 # cf. https://github.com/grzegorznowak/ansible-nvm-node
 nvm_install_script_version: "0.37.2"
 nvm_user_name: "sugardon_admin"
-nvm_dir: "/home/sugardon_admin/nvm"
+nvm_dir: "/home/sugardon_admin/.nvm"
 nvm_node_version: "14.16.0"
 nvm_install_globally: []
