--- a/inventories/dev_tool/group_vars/wsl2_ubuntu/nvm.yml
+++ b/inventories/dev_tool/group_vars/wsl2_ubuntu/nvm.yml
@@ -4,5 +4,4 @@ nvm_install_script_version: "0.37.2"
 nvm_user_name: "sugardon_admin"
 nvm_dir: "/home/sugardon_admin/.nvm"
 nvm_node_version: "14.16.0"
-nvm_install_globally:
-  - neovim
+nvm_install_globally: []
