--- a/roles/snap/tasks/main.yml
+++ b/roles/snap/tasks/main.yml
@@ -4,5 +4,5 @@
     name: "{{ item.name }}"
     channel: "{{ item.channel | default('latest/stable') }}"
     classic: "{{ item.classic | default(false) }}"
-    state: "{{ item.state | default(present) }}"
+    state: "{{ item.state | default('present') }}"
   with_items: "{{ snap_manual_items }}"
