update sugardon01 first time

--- a/playbooks/first_time/ansible.cfg
+++ b/playbooks/first_time/ansible.cfg
@@ -3,5 +3,5 @@ roles_path = ../../roles:../../galaxy_roles
 retry_files_enabled = False
 host_key_checking = False
 interpreter_python = auto_silent
-remote_user = root
+remote_user = ubuntu
 ask_pass = True
