--- a/playbooks/sugardon01_setup/sugardon01.yml
+++ b/playbooks/sugardon01_setup/sugardon01.yml
@@ -1,6 +1,15 @@
 ---
 - hosts:
     - admin
+  become: true
+  gather_facts: true
+
+  roles:
+    - user
+    - sshd
+    - apt
+
+- hosts:
     - cluster
   become: true
   gather_facts: true
@@ -9,3 +18,8 @@
     - user
     - sshd
     - apt
+    - docker
+  tasks:
+    - name: Disable UFW
+      ufw:
+        state: disabled
