Update wsl2 ubuntu (#27)
* Update wsl2 ubuntu

* Update

* Fix to lint

* Update

* Update

--- a/playbooks/dev_tool/wsl2_ubuntu.yml
+++ b/playbooks/dev_tool/wsl2_ubuntu.yml
@@ -9,6 +9,7 @@
     - apt
     - snap
     - ansible-galaxy-pyenv
-    - ansible-nvm-node
+    # Use https://github.com/lukechilds/zsh-nvm instead of ansible
+    # - ansible-nvm-node
     - starship
     - rcm_dotfiles
