--- a/inventories/dev_tool/group_vars/wsl2_ubuntu/snap.yml
+++ b/inventories/dev_tool/group_vars/wsl2_ubuntu/snap.yml
@@ -11,3 +11,9 @@ snap_manual_items:
   - name: kubectl
     classic: true
     channel: latest/stable
+  - name: nvim
+    classic: true
+    channel: latest/stable
+  - name: go
+    classic: true
+    channel: latest/stable
